examples/test/testpolicy2190.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2190
  namespace: namespace313
spec:
  podSelector:
    matchLabels:
      key34: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value14
          key10: value39
          key38: value39
      podSelector:
        matchLabels:
          key12: value12
          key27: value3
